[package]
name = "openbook-v1-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openbook_dex = "0.5.6"
solana-rpc-client = "1.18.3"
anyhow = "1.0.80"
solana-program = "1.18.3"
solana-sdk = "1.18.3"
dotenv = "0.15.0"